assgn3/parser/grammar.output
Terminals unused in grammar

   CONSTANT
   STRING
   OR_OP
   AND_OP


Rules useless in parser due to conflicts

   75 RADDSUB: RADDSUB '-' RMULTIDIV
   76        | RADDSUB '+' RMULTIDIV

   78 RMULTIDIV: RMULTIDIV '*' RMATH
   79          | RMULTIDIV '/' RMATH
   80          | RMULTIDIV '%' RMATH

   93 ADDSUB: ADDSUB '-' MULTIDIV
   94       | ADDSUB '+' MULTIDIV

   96 MULTIDIV: MULTIDIV '*' INTMATH
   97         | MULTIDIV '/' INTMATH
   98         | MULTIDIV '%' INTMATH

  112 COND: RMATH

  126 ARGT: MARGT RMATH

  137 FL3: VARNAME '=' RMATH
  138    | TYPE VARNAME '=' RMATH
  139    | VARNAME OPERATOR '=' RMATH


State 0 conflicts: 2 shift/reduce
State 10 conflicts: 3 shift/reduce
State 11 conflicts: 2 shift/reduce
State 12 conflicts: 2 shift/reduce
State 13 conflicts: 2 shift/reduce
State 20 conflicts: 3 shift/reduce
State 40 conflicts: 1 shift/reduce
State 45 conflicts: 6 shift/reduce
State 47 conflicts: 1 shift/reduce
State 55 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce
State 59 conflicts: 2 shift/reduce
State 60 conflicts: 3 shift/reduce
State 75 conflicts: 2 shift/reduce
State 77 conflicts: 2 shift/reduce
State 78 conflicts: 2 shift/reduce
State 79 conflicts: 3 shift/reduce
State 80 conflicts: 2 shift/reduce
State 81 conflicts: 2 shift/reduce
State 89 conflicts: 1 shift/reduce
State 90 conflicts: 7 reduce/reduce
State 95 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 104 conflicts: 3 shift/reduce
State 105 conflicts: 1 shift/reduce
State 109 conflicts: 44 reduce/reduce
State 134 conflicts: 3 shift/reduce, 7 reduce/reduce
State 135 conflicts: 3 shift/reduce, 7 reduce/reduce
State 136 conflicts: 7 reduce/reduce
State 137 conflicts: 7 reduce/reduce
State 138 conflicts: 7 reduce/reduce
State 151 conflicts: 3 reduce/reduce
State 152 conflicts: 3 shift/reduce
State 171 conflicts: 3 shift/reduce, 44 reduce/reduce
State 172 conflicts: 3 shift/reduce, 44 reduce/reduce
State 173 conflicts: 44 reduce/reduce
State 174 conflicts: 44 reduce/reduce
State 175 conflicts: 44 reduce/reduce
State 179 conflicts: 1 shift/reduce, 1 reduce/reduce
State 185 conflicts: 8 shift/reduce
State 187 conflicts: 2 reduce/reduce
State 220 conflicts: 10 reduce/reduce
State 236 conflicts: 1 shift/reduce
State 240 conflicts: 1 shift/reduce, 9 reduce/reduce
State 242 conflicts: 15 reduce/reduce
State 243 conflicts: 8 shift/reduce
State 262 conflicts: 30 reduce/reduce
State 264 conflicts: 1 shift/reduce
State 268 conflicts: 8 shift/reduce
State 269 conflicts: 8 shift/reduce
State 270 conflicts: 8 shift/reduce
State 309 conflicts: 1 reduce/reduce
State 318 conflicts: 1 reduce/reduce
State 319 conflicts: 1 reduce/reduce


Grammar

    0 $accept: START $end

    1 START: OUTER MAINF OUTER

    2 OUTER: %empty
    3      | VARDEF OUTER
    4      | STRUCT1 OUTER
    5      | FUNCTION OUTER

    6 MAINARG: %empty
    7        | "int argc, char* argv[]"

    8 MAINF: VOID MAIN '(' MAINARG ')' '{' INNER '}'
    9      | INT MAIN '(' MAINARG ')' '{' INNER '}'

   10 TYPE: INT
   11     | BOOL
   12     | VOID
   13     | FLOAT
   14     | DOUBLE
   15     | STRUCT IDENTIFIER
   16     | TYPE '*'
   17     | CHAR

   18 STRUCT1: STRUCT IDENTIFIER '{' MVARDEF VARDEF ';' '}'

   19 MVARDEF: MVARDEF VARDEF ';'
   20        | %empty

   21 FUNCTION: TYPE VARNAME '(' FARG ')' '{' INNER '}'

   22 INNER: LOOP INNER
   23      | CONDITIONAL INNER
   24      | VARDEF INNER
   25      | STRUCT INNER
   26      | FCALL INNER
   27      | RETURN INNER
   28      | ';'
   29      | %empty
   30      | INPUT INNER
   31      | OUTPUT INNER
   32      | MATH INNER

   33 VARNAME: '*' VARNAME
   34        | '&' VARNAME
   35        | IDENTIFIER BRACKET

   36 BRACKET: BRACKET '[' INTMATH ']'
   37        | %empty

   38 MARG: MARG TYPE VARNAME ','
   39     | %empty

   40 FARG: MARG TYPE VARNAME

   41 VARDEF: TYPE MVAR VARNAME ';'
   42       | TYPE MVAR VARNAME '=' CONST ';'
   43       | TYPE MVAR VARNAME '=' FCALL ';'
   44       | TYPE MVAR VARNAME '=' RMATH ';'
   45       | TYPE MVAR VARNAME '=' VARNAME ';'
   46       | TYPE MVAR VARNAME '=' '{' MCONST CONST '}' ';'

   47 MVAR: MVAR VARNAME ','
   48     | MVAR VARNAME '=' CONST ','
   49     | MVAR VARNAME '=' FCALL ','
   50     | MVAR VARNAME '=' RMATH ','
   51     | MVAR VARNAME '=' VARNAME ','
   52     | MVAR VARNAME '=' MCONST ','
   53     | %empty

   54 MCONST: MCONST CONST ','
   55       | %empty

   56 MATH: VARNAME '=' RMATH ';'
   57     | ';'
   58     | TYPE VARNAME '=' RMATH
   59     | VARNAME OPERATOR '=' RMATH ';'
   60     | VARNAME INC_OP ';'
   61     | VARNAME DEC_OP ';'
   62     | INC_OP VARNAME ';'
   63     | DEC_OP VARNAME ';'

   64 RMATH: VARNAME
   65      | FCALL
   66      | VARNAME INC_OP
   67      | VARNAME DEC_OP
   68      | INC_OP VARNAME
   69      | DEC_OP VARNAME
   70      | '(' RMATH ')'
   71      | '!' RMATH
   72      | CONST
   73      | RADDSUB

   74 RADDSUB: RMULTIDIV
   75        | RADDSUB '-' RMULTIDIV
   76        | RADDSUB '+' RMULTIDIV

   77 RMULTIDIV: RMATH
   78          | RMULTIDIV '*' RMATH
   79          | RMULTIDIV '/' RMATH
   80          | RMULTIDIV '%' RMATH

   81 INTMATH: VARNAME
   82        | FCALL
   83        | '(' INTMATH ')'
   84        | '!' INTMATH
   85        | INTCONST
   86        | ADDSUB
   87        | VARNAME INC_OP
   88        | VARNAME DEC_OP
   89        | INC_OP VARNAME
   90        | DEC_OP VARNAME
   91        | %empty

   92 ADDSUB: MULTIDIV
   93       | ADDSUB '-' MULTIDIV
   94       | ADDSUB '+' MULTIDIV

   95 MULTIDIV: INTMATH
   96         | MULTIDIV '*' INTMATH
   97         | MULTIDIV '/' INTMATH
   98         | MULTIDIV '%' INTMATH

   99 CONDITIONAL: IFN
  100            | SWITCHN

  101 IFN: IF '(' COND ')' '{' INNER '}' ELSEC

  102 RELATIONALOPERATOR: '>'
  103                   | '<'
  104                   | DOUBLE_EQ_OP
  105                   | NOT_EQ_OP
  106                   | LESS_EQ_OP
  107                   | GRE_EQ_OP

  108 COND: '(' COND ')'
  109     | COND "&&" COND
  110     | COND "||" COND
  111     | '!' COND
  112     | RMATH
  113     | COND RELATIONALOPERATOR COND

  114 ELSEC: ELIF '(' COND ')' '{' INNER '}' ELSEC
  115      | ELSE '{' INNER '}'
  116      | %empty

  117 SWITCHN: SWITCH '(' COND ')' '{' SWITCHINNER '}'

  118 SWITCHINNER: CASE CONST ':' '{' INNER '}' SWITCHINNER
  119            | CASE CONST ':' INNER SWITCHINNER
  120            | DEFAULT ':' '{' INNER '}' WODEFAULT
  121            | DEFAULT ':' INNER WODEFAULT
  122            | %empty

  123 WODEFAULT: CASE CONST ':' '{' INNER '}' WODEFAULT
  124          | CASE CONST ':' INNER WODEFAULT
  125          | %empty

  126 ARGT: MARGT RMATH

  127 MARGT: MARGT RMATH ','
  128      | %empty

  129 FCALL: VARNAME '(' ARGT ')'

  130 LOOP: FORN
  131     | WHILEN
  132     | DOWHILEN

  133 FL1: MATH
  134    | %empty

  135 FL2: COND
  136    | %empty

  137 FL3: VARNAME '=' RMATH
  138    | TYPE VARNAME '=' RMATH
  139    | VARNAME OPERATOR '=' RMATH
  140    | VARNAME INC_OP
  141    | VARNAME DEC_OP
  142    | INC_OP VARNAME
  143    | DEC_OP VARNAME

  144 OPERATOR: '+'
  145         | '-'
  146         | '*'
  147         | '/'
  148         | '&'
  149         | '^'
  150         | '|'
  151         | '%'

  152 FORN: FOR '(' FL1 FL2 ';' FL3 ')' '{' INNER '}'

  153 WHILEN: WHILE '(' COND ')' '{' INNER '}'

  154 DOWHILEN: DO '{' INNER '}' WHILE '(' COND ')' ';'

  155 MIN: MIN INP_OP VARNAME
  156    | %empty

  157 MOUT: MOUT OUT_OP VARNAME
  158     | MOUT OUT_OP CONST
  159     | MOUT OUT_OP WHITESPACE
  160     | %empty

  161 INPUT: IN MIN INP_OP VARNAME ';'

  162 OUTPUT: OUT MOUT OUT_OP VARNAME ';'
  163       | OUT MOUT OUT_OP CONST ';'
  164       | OUT MOUT OUT_OP WHITESPACE ';'

  165 CONST: TRUE
  166      | FALSE
  167      | INTCONST
  168      | FLOAT
  169      | DOUBLE
  170      | CHAR_CONSTANT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 71 84 111
'%' (37) 80 98 151
'&' (38) 34 148
'(' (40) 8 9 21 70 83 101 108 114 117 129 152 153 154
')' (41) 8 9 21 70 83 101 108 114 117 129 152 153 154
'*' (42) 16 33 78 96 146
'+' (43) 76 94 144
',' (44) 38 47 48 49 50 51 52 54 127
'-' (45) 75 93 145
'/' (47) 79 97 147
':' (58) 118 119 120 121 123 124
';' (59) 18 19 28 41 42 43 44 45 46 56 57 59 60 61 62 63 152 154 161
    162 163 164
'<' (60) 103
'=' (61) 42 43 44 45 46 48 49 50 51 52 56 58 59 137 138 139
'>' (62) 102
'[' (91) 36
']' (93) 36
'^' (94) 149
'{' (123) 8 9 18 21 46 101 114 115 117 118 120 123 152 153 154
'|' (124) 150
'}' (125) 8 9 18 21 46 101 114 115 117 118 120 123 152 153 154
error (256)
IDENTIFIER (258) 15 18 35
BOOL (259) 11
INT (260) 9 10
FLOAT (261) 13 168
DOUBLE (262) 14 169
CHAR (263) 17
DO (264) 154
WHILE (265) 153 154
IF (266) 101
ELIF (267) 114
FALSE (268) 166
TRUE (269) 165
IN (270) 161
OUT (271) 162 163 164
MAIN (272) 8 9
VOID (273) 8 12
FOR (274) 152
INTCONST (275) 85 167
CHAR_CONSTANT (276) 170
RETURN (277) 27
STRUCT (278) 15 18 25
SWITCH (279) 117
WHITESPACE (280) 159 164
CASE (281) 118 119 123 124
ELSE (282) 115
DEFAULT (283) 120 121
CONSTANT (284)
STRING (285)
INP_OP (286) 155 161
OUT_OP (287) 157 158 159 162 163 164
OR_OP (288)
INC_OP (289) 60 62 66 68 87 89 140 142
DEC_OP (290) 61 63 67 69 88 90 141 143
AND_OP (291)
LESS_EQ_OP (292) 106
GRE_EQ_OP (293) 107
DOUBLE_EQ_OP (294) 104
NOT_EQ_OP (295) 105
"int argc, char* argv[]" (296) 7
"&&" (297) 109
"||" (298) 110


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
START (66)
    on left: 1, on right: 0
OUTER (67)
    on left: 2 3 4 5, on right: 1 3 4 5
MAINARG (68)
    on left: 6 7, on right: 8 9
MAINF (69)
    on left: 8 9, on right: 1
TYPE (70)
    on left: 10 11 12 13 14 15 16 17, on right: 16 21 38 40 41 42 43
    44 45 46 58 138
STRUCT1 (71)
    on left: 18, on right: 4
MVARDEF (72)
    on left: 19 20, on right: 18 19
FUNCTION (73)
    on left: 21, on right: 5
INNER (74)
    on left: 22 23 24 25 26 27 28 29 30 31 32, on right: 8 9 21 22
    23 24 25 26 27 30 31 32 101 114 115 118 119 120 121 123 124 152
    153 154
VARNAME (75)
    on left: 33 34 35, on right: 21 33 34 38 40 41 42 43 44 45 46 47
    48 49 50 51 52 56 58 59 60 61 62 63 64 66 67 68 69 81 87 88 89
    90 129 137 138 139 140 141 142 143 155 157 161 162
BRACKET (76)
    on left: 36 37, on right: 35 36
MARG (77)
    on left: 38 39, on right: 38 40
FARG (78)
    on left: 40, on right: 21
VARDEF (79)
    on left: 41 42 43 44 45 46, on right: 3 18 19 24
MVAR (80)
    on left: 47 48 49 50 51 52 53, on right: 41 42 43 44 45 46 47 48
    49 50 51 52
MCONST (81)
    on left: 54 55, on right: 46 52 54
MATH (82)
    on left: 56 57 58 59 60 61 62 63, on right: 32 133
RMATH (83)
    on left: 64 65 66 67 68 69 70 71 72 73, on right: 44 50 56 58 59
    70 71 77 78 79 80 112 126 127 137 138 139
RADDSUB (84)
    on left: 74 75 76, on right: 73 75 76
RMULTIDIV (85)
    on left: 77 78 79 80, on right: 74 75 76 78 79 80
INTMATH (86)
    on left: 81 82 83 84 85 86 87 88 89 90 91, on right: 36 83 84 95
    96 97 98
ADDSUB (87)
    on left: 92 93 94, on right: 86 93 94
MULTIDIV (88)
    on left: 95 96 97 98, on right: 92 93 94 96 97 98
CONDITIONAL (89)
    on left: 99 100, on right: 23
IFN (90)
    on left: 101, on right: 99
RELATIONALOPERATOR (91)
    on left: 102 103 104 105 106 107, on right: 113
COND (92)
    on left: 108 109 110 111 112 113, on right: 101 108 109 110 111
    113 114 117 135 153 154
ELSEC (93)
    on left: 114 115 116, on right: 101 114
SWITCHN (94)
    on left: 117, on right: 100
SWITCHINNER (95)
    on left: 118 119 120 121 122, on right: 117 118 119
WODEFAULT (96)
    on left: 123 124 125, on right: 120 121 123 124
ARGT (97)
    on left: 126, on right: 129
MARGT (98)
    on left: 127 128, on right: 126 127
FCALL (99)
    on left: 129, on right: 26 43 49 65 82
LOOP (100)
    on left: 130 131 132, on right: 22
FL1 (101)
    on left: 133 134, on right: 152
FL2 (102)
    on left: 135 136, on right: 152
FL3 (103)
    on left: 137 138 139 140 141 142 143, on right: 152
OPERATOR (104)
    on left: 144 145 146 147 148 149 150 151, on right: 59 139
FORN (105)
    on left: 152, on right: 130
WHILEN (106)
    on left: 153, on right: 131
DOWHILEN (107)
    on left: 154, on right: 132
MIN (108)
    on left: 155 156, on right: 155 161
MOUT (109)
    on left: 157 158 159 160, on right: 157 158 159 162 163 164
INPUT (110)
    on left: 161, on right: 30
OUTPUT (111)
    on left: 162 163 164, on right: 31
CONST (112)
    on left: 165 166 167 168 169 170, on right: 42 46 48 54 72 118
    119 123 124 158 163


State 0

    0 $accept: . START $end

    BOOL    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    CHAR    shift, and go to state 5
    VOID    shift, and go to state 6
    STRUCT  shift, and go to state 7

    INT   [reduce using rule 2 (OUTER)]
    VOID  [reduce using rule 2 (OUTER)]

    START     go to state 8
    OUTER     go to state 9
    TYPE      go to state 10
    STRUCT1   go to state 11
    FUNCTION  go to state 12
    VARDEF    go to state 13


State 1

   11 TYPE: BOOL .

    $default  reduce using rule 11 (TYPE)


State 2

   10 TYPE: INT .

    $default  reduce using rule 10 (TYPE)


State 3

   13 TYPE: FLOAT .

    $default  reduce using rule 13 (TYPE)


State 4

   14 TYPE: DOUBLE .

    $default  reduce using rule 14 (TYPE)


State 5

   17 TYPE: CHAR .

    $default  reduce using rule 17 (TYPE)


State 6

   12 TYPE: VOID .

    $default  reduce using rule 12 (TYPE)


State 7

   15 TYPE: STRUCT . IDENTIFIER
   18 STRUCT1: STRUCT . IDENTIFIER '{' MVARDEF VARDEF ';' '}'

    IDENTIFIER  shift, and go to state 14


State 8

    0 $accept: START . $end

    $end  shift, and go to state 15


State 9

    1 START: OUTER . MAINF OUTER

    INT   shift, and go to state 16
    VOID  shift, and go to state 17

    MAINF  go to state 18


State 10

   16 TYPE: TYPE . '*'
   21 FUNCTION: TYPE . VARNAME '(' FARG ')' '{' INNER '}'
   41 VARDEF: TYPE . MVAR VARNAME ';'
   42       | TYPE . MVAR VARNAME '=' CONST ';'
   43       | TYPE . MVAR VARNAME '=' FCALL ';'
   44       | TYPE . MVAR VARNAME '=' RMATH ';'
   45       | TYPE . MVAR VARNAME '=' VARNAME ';'
   46       | TYPE . MVAR VARNAME '=' '{' MCONST CONST '}' ';'

    IDENTIFIER  shift, and go to state 19
    '*'         shift, and go to state 20
    '&'         shift, and go to state 21

    IDENTIFIER  [reduce using rule 53 (MVAR)]
    '*'         [reduce using rule 53 (MVAR)]
    '&'         [reduce using rule 53 (MVAR)]

    VARNAME  go to state 22
    MVAR     go to state 23


State 11

    4 OUTER: STRUCT1 . OUTER

    BOOL    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    CHAR    shift, and go to state 5
    VOID    shift, and go to state 6
    STRUCT  shift, and go to state 7

    INT       [reduce using rule 2 (OUTER)]
    VOID      [reduce using rule 2 (OUTER)]
    $default  reduce using rule 2 (OUTER)

    OUTER     go to state 24
    TYPE      go to state 10
    STRUCT1   go to state 11
    FUNCTION  go to state 12
    VARDEF    go to state 13


State 12

    5 OUTER: FUNCTION . OUTER

    BOOL    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    CHAR    shift, and go to state 5
    VOID    shift, and go to state 6
    STRUCT  shift, and go to state 7

    INT       [reduce using rule 2 (OUTER)]
    VOID      [reduce using rule 2 (OUTER)]
    $default  reduce using rule 2 (OUTER)

    OUTER     go to state 25
    TYPE      go to state 10
    STRUCT1   go to state 11
    FUNCTION  go to state 12
    VARDEF    go to state 13


State 13

    3 OUTER: VARDEF . OUTER

    BOOL    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    CHAR    shift, and go to state 5
    VOID    shift, and go to state 6
    STRUCT  shift, and go to state 7

    INT       [reduce using rule 2 (OUTER)]
    VOID      [reduce using rule 2 (OUTER)]
    $default  reduce using rule 2 (OUTER)

    OUTER     go to state 26
    TYPE      go to state 10
    STRUCT1   go to state 11
    FUNCTION  go to state 12
    VARDEF    go to state 13


State 14

   15 TYPE: STRUCT IDENTIFIER .
   18 STRUCT1: STRUCT IDENTIFIER . '{' MVARDEF VARDEF ';' '}'

    '{'  shift, and go to state 27

    $default  reduce using rule 15 (TYPE)


State 15

    0 $accept: START $end .

    $default  accept


State 16

    9 MAINF: INT . MAIN '(' MAINARG ')' '{' INNER '}'

    MAIN  shift, and go to state 28


State 17

    8 MAINF: VOID . MAIN '(' MAINARG ')' '{' INNER '}'

    MAIN  shift, and go to state 29


State 18

    1 START: OUTER MAINF . OUTER

    BOOL    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    CHAR    shift, and go to state 5
    VOID    shift, and go to state 6
    STRUCT  shift, and go to state 7

    $default  reduce using rule 2 (OUTER)

    OUTER     go to state 30
    TYPE      go to state 10
    STRUCT1   go to state 11
    FUNCTION  go to state 12
    VARDEF    go to state 13


State 19

   35 VARNAME: IDENTIFIER . BRACKET

    $default  reduce using rule 37 (BRACKET)

    BRACKET  go to state 31


State 20

   16 TYPE: TYPE '*' .
   33 VARNAME: '*' . VARNAME

    IDENTIFIER  shift, and go to state 19
    '*'         shift, and go to state 32
    '&'         shift, and go to state 21

    IDENTIFIER  [reduce using rule 16 (TYPE)]
    '*'         [reduce using rule 16 (TYPE)]
    '&'         [reduce using rule 16 (TYPE)]

    VARNAME  go to state 33


State 21

   34 VARNAME: '&' . VARNAME

    IDENTIFIER  shift, and go to state 19
    '*'         shift, and go to state 32
    '&'         shift, and go to state 21

    VARNAME  go to state 34


State 22

   21 FUNCTION: TYPE VARNAME . '(' FARG ')' '{' INNER '}'

    '('  shift, and go to state 35


State 23

   41 VARDEF: TYPE MVAR . VARNAME ';'
   42       | TYPE MVAR . VARNAME '=' CONST ';'
   43       | TYPE MVAR . VARNAME '=' FCALL ';'
   44       | TYPE MVAR . VARNAME '=' RMATH ';'
   45       | TYPE MVAR . VARNAME '=' VARNAME ';'
   46       | TYPE MVAR . VARNAME '=' '{' MCONST CONST '}' ';'
   47 MVAR: MVAR . VARNAME ','
   48     | MVAR . VARNAME '=' CONST ','
   49     | MVAR . VARNAME '=' FCALL ','
   50     | MVAR . VARNAME '=' RMATH ','
   51     | MVAR . VARNAME '=' VARNAME ','
   52     | MVAR . VARNAME '=' MCONST ','

    IDENTIFIER  shift, and go to state 19
    '*'         shift, and go to state 32
    '&'         shift, and go to state 21

    VARNAME  go to state 36


State 24

    4 OUTER: STRUCT1 OUTER .

    $default  reduce using rule 4 (OUTER)


State 25

    5 OUTER: FUNCTION OUTER .

    $default  reduce using rule 5 (OUTER)


State 26

    3 OUTER: VARDEF OUTER .

    $default  reduce using rule 3 (OUTER)


State 27

   18 STRUCT1: STRUCT IDENTIFIER '{' . MVARDEF VARDEF ';' '}'

    $default  reduce using rule 20 (MVARDEF)

    MVARDEF  go to state 37


State 28

    9 MAINF: INT MAIN . '(' MAINARG ')' '{' INNER '}'

    '('  shift, and go to state 38


State 29

    8 MAINF: VOID MAIN . '(' MAINARG ')' '{' INNER '}'

    '('  shift, and go to state 39


State 30

    1 START: OUTER MAINF OUTER .

    $default  reduce using rule 1 (START)


State 31

   35 VARNAME: IDENTIFIER BRACKET .
   36 BRACKET: BRACKET . '[' INTMATH ']'

    '['  shift, and go to state 40

    $default  reduce using rule 35 (VARNAME)


State 32

   33 VARNAME: '*' . VARNAME

    IDENTIFIER  shift, and go to state 19
    '*'         shift, and go to state 32
    '&'         shift, and go to state 21

    VARNAME  go to state 33


State 33

   33 VARNAME: '*' VARNAME .

    $default  reduce using rule 33 (VARNAME)


State 34

   34 VARNAME: '&' VARNAME .

    $default  reduce using rule 34 (VARNAME)


State 35

   21 FUNCTION: TYPE VARNAME '(' . FARG ')' '{' INNER '}'

    $default  reduce using rule 39 (MARG)

    MARG  go to state 41
    FARG  go to state 42


State 36

   41 VARDEF: TYPE MVAR VARNAME . ';'
   42       | TYPE MVAR VARNAME . '=' CONST ';'
   43       | TYPE MVAR VARNAME . '=' FCALL ';'
   44       | TYPE MVAR VARNAME . '=' RMATH ';'
   45       | TYPE MVAR VARNAME . '=' VARNAME ';'
   46       | TYPE MVAR VARNAME . '=' '{' MCONST CONST '}' ';'
   47 MVAR: MVAR VARNAME . ','
   48     | MVAR VARNAME . '=' CONST ','
   49     | MVAR VARNAME . '=' FCALL ','
   50     | MVAR VARNAME . '=' RMATH ','
   51     | MVAR VARNAME . '=' VARNAME ','
   52     | MVAR VARNAME . '=' MCONST ','

    ';'  shift, and go to state 43
    ','  shift, and go to state 44
    '='  shift, and go to state 45


State 37

   18 STRUCT1: STRUCT IDENTIFIER '{' MVARDEF . VARDEF ';' '}'
   19 MVARDEF: MVARDEF . VARDEF ';'

    BOOL    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    CHAR    shift, and go to state 5
    VOID    shift, and go to state 6
    STRUCT  shift, and go to state 46

    TYPE    go to state 47
    VARDEF  go to state 48


State 38

    9 MAINF: INT MAIN '(' . MAINARG ')' '{' INNER '}'

    "int argc, char* argv[]"  shift, and go to state 49

    $default  reduce using rule 6 (MAINARG)

    MAINARG  go to state 50


State 39

    8 MAINF: VOID MAIN '(' . MAINARG ')' '{' INNER '}'

    "int argc, char* argv[]"  shift, and go to state 49

    $default  reduce using rule 6 (MAINARG)

    MAINARG  go to state 51


State 40

   36 BRACKET: BRACKET '[' . INTMATH ']'
